Recorder file path changes, PathHandler, OOP, Model path changes and  Comments.